@@ -332,7 +332,7 @@ GalComm2.ftchdAlbmProp = Fetched album properties.
 GalComm2.crateAlbmOk = Create album successful.
 GalComm2.trnsfrStat = Transferring {0} / {1}kB ({2}kB/s)
 GalComm2.upCompSrvrProc = Upload completed: server processing...
-GalComm2.fetchAlbImages = Getting the list of images from album {0}
+GalComm2.fetchAlbImages = Listing images in album {0}
 GalComm2.fetchAlbImagesDone = Received {0} images descriptions.
 GalComm2.moveAlbum = Moving album {0} to {1}
 GalComm2.moveAlbumDone = Album successfully moved
