@@ -1,3 +1,10 @@
+2003-01-29  Pierre-Luc Paour <gallery@paour.com> (1.3-b25)
+
+	* Made Log re-entrant, so that when Applet is restarted within
+	  the same VM, the log can keep going.
+	* Slideshow applet now pre-fetches the first picture for a faster
+	  start.
+
 2003-01-29  Pierre-Luc Paour <gallery@paour.com> (1.3-b24)
 
 	* Recursive slideshows.
